--- a/Module 1/M1_L1.ipynb
+++ b/Module 1/M1_L1.ipynb
@@ -1376,13 +1376,14 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib\n",
-        "from matplotlib import pyplot as plt"
+        "# import matplotlib\n",
+        "# from matplotlib import pyplot as plt\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "oJ7JrZqWioIO"
       },
-      "execution_count": 53,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -1400,9 +1401,9 @@
           "height": 265
         },
         "id": "tzunFbpUxKAP",
-        "outputId": "345299cd-5e7e-4e81-844f-7e997300abd7"
+        "outputId": "a42c977d-e838-4b64-fb48-d98a2c3c802c"
       },
-      "execution_count": 54,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
