--- a/M1L2.ipynb
+++ b/M1L2.ipynb
@@ -640,7 +640,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## lets have a lot at bigrams.\n",
+        "## lets have a look at bigrams.\n",
         "bigram_eng1"
       ],
       "metadata": {
@@ -648,9 +648,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7LYSVe02dG59",
-        "outputId": "61f42de6-7723-4fef-f451-2f5958ef89b6"
+        "outputId": "0a4d2c2a-3b8e-4110-9d16-d6bf4d80c3f3"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1158,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 70
         }
       ]
     },
